--- a/client/src/components/footer/footer.html
+++ b/client/src/components/footer/footer.html
@@ -52,7 +52,7 @@
         </div>
       </div>
     </div>
-    <div class="footer-copyright text-center py-3">© 2020 Copyright:
-      <a href="https://mdbootstrap.com/"> MDBootstrap.com</a>
+    <div class="footer-copyright text-center py-3">github:
+      <a href="https://github.com/ThatMadMf/WebPackExample">repo</a>
     </div>
   </footer>
