--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -1,10 +1,32 @@
 html {
+    height: 100%;
   body {
+    height: inherit ;
+    
     #app {
-      height: 100%;
+      height: inherit;
+
+      header {
+        height: 5%;
+      }
       
-      .page-footer {
+      footer {
+          height: 25%;
           background-color: lightgray;
+      }
+
+      .content-wrapper {
+        height: 70%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        flex-wrap: wrap;
+
+        .card {
+            margin-top: 2rem;
+            width: 15rem;
+            height: 20rem;
+        }
       }
     }
   }
